# xfce4-terminal-theme-selector

./: FAQ.md  README.md  TODO  pyproject.toml
xfce4_terminal_theme_selector/: apply.py  main.py  themes.py  ui.py
